# inmortalao-cpp-dx11

./: .gitignore  InmortalAOVS.sln  README.md
Cliente/: EditorMapas.exe.metagen  EditorParticulas.exe.metagen  imgui.ini
Cliente/Shaders/: texture.fx
Codigo Server/: .cproject  CMakeLists.txt  CompileServer.sh  OldCMakeLists.txt  untitled.sublime-workspace
Codigo Server/Base de datos/: Comando Import MongoDbs  backUp4022017.sql  objetosJsonDB.json
Codigo Server/Testing/: AllTests.cpp
Codigo Server/bbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
Codigo Server/src/: .cproject  Program.cpp  Program.h  main.cpp
Codigo Server/src/.metadata/.mylyn/.taskListIndex/: segments_1
Codigo Server/src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Codigo Server/src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Codigo Server/src/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
Codigo Server/src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Codigo Server/src/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Codigo Server/src/Cargadores/: Cuenta.cpp  Cuenta.h  Hechizo.cpp  Hechizo.h  Hechizos.cpp  Hechizos.h  Mapa.cpp  Mapa.h  Mapas.cpp  Mapas.h  Npc.cpp  Npc.h  Npcs.cpp  Npcs.h  Obj.cpp  Obj.h  Objs.h  Personaje.cpp  Personaje.h  Personajes.cpp  Personajes.h  Resources.cpp  Resources.h
Codigo Server/src/Common/: split.cpp  split.h
Codigo Server/src/Conexion/: .Tcp.cpp.swp
Codigo Server/src/Conexion/Messagin/: ConnectUser.cpp  ConnectUser.h  LogIn.cpp  LogIn.h  Message.h  Messages.h  Walk.cpp  Walk.h
Codigo Server/src/Conexion/TCPConnection/: DataSocket.cpp  DataSocket.h  ServerSocket.cpp  ServerSocket.h  Tcp.cpp  Tcp.h
Codigo Server/src/Conexion/UDPConnection/: DataUDPSocket.cpp  DataUDPSocket.h  ServerUDPSocket.cpp  ServerUDPSocket.h  UDP.cpp  UDP.h
Codigo Server/src/DB/: DataBase.cpp  DataBase.h
Codigo cliente/: Codigo cliente.vcxproj  Codigo cliente.vcxproj.filters  Programa.cpp  Programa.h  main.cpp
EditorIndices/: EditorIndices.vcxproj
EditorMapas/: EditorMapas.aps  EditorMapas.h  EditorMapas.vcxproj  EditorMapas.vcxproj.filters  Grafica.cpp  Grafica.h  Programa.cpp  Programa.h  main.cpp  resource.h
EditorParticulas/: DirectXHelpers.h  EditorFrm.cpp  EditorFrm.h  EditorParticulas.aps  EditorParticulas.rc  EditorParticulas.vcxproj  EditorParticulas.vcxproj.filters  Grafica.cpp  Grafica.h  Programa.cpp  Programa.h  main.cpp
EditorParticulas/Shaders/: texture.fx
InmortalDLL/: InmortalDLL.sln
InmortalDLL/InmortalDLL/: InmortalDLL.vcxproj  InmortalDLL.vcxproj.filters  defs.def  prueba.cpp  prueba.h
JicLib/: JicLib.vcxproj  JicLib.vcxproj.filters  ReadMe.txt  TCP.h  UDP.cpp  UDP.h
JicLib/Capas/: administradorRecursos.cpp  administradorRecursos.h  capa1.cpp  (+7 more)
(+94 files in other folders)
